--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #282C34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.app-title {
+  font-size: 2.5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.software-form {
+  margin: 2rem;
+}
+.form-input {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+.submit-button {
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  background-color: #61DAFB;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.software-list {
+  width: 50%;
+  margin: auto;
+}
+.software-item {
+  border: 1px solid #61DAFB;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1rem;
+}
+.software-name {
+  font-size: 1.5rem;
+}
+.software-version {
+  font-size: 1.2rem;
 }
